src/test/deca/syntax/invalid/our_synt_tests/robin-test5-badIdent.deca
// Error: special word used as identifier.

{
boolean protected = true;
}
